# scheduler

./: .gitignore  CMakeLists.txt  LICENSE  README.md  scheduler.c  scheduler.h  scheduler.hpp  vcpkg.json
.github/workflows/: ctest.yml
src/: CMakeLists.txt  scheduler.c  scheduler.h
tests/: CMakeLists.txt  test_custom_reset_event.c  test_cycles_late.c  test_tick.c
